...
            IconButton(
                onClick = { onNavigate(KpknRoute.Concepts.create()) },
                modifier = Modifier,
            ) {
                Icon(
                    imageVector = Icons.Default.Search,
                    contentDescription = "Buscar conceptos",
                    tint = CONCEPTS_LINK_COLOR,
                )
            }
        }

        Surface(
...
