...
        WorkoutExerciseContextTab.EDIT to "Editar",
        WorkoutExerciseContextTab.REPLACE to "Reemplazar",
    ).filter { (tab, _) ->
        allowExerciseManagementActions || (tab != WorkoutExerciseContextTab.REPLACE && tab != WorkoutExerciseContextTab.EDIT)
    }
    val overflowTabs = listOf(
        WorkoutExerciseContextTab.DRAIN to "Drenaje",
        WorkoutExerciseContextTab.ENERGY to "Gasto calórico",
        WorkoutExerciseContextTab.RM_CALC to "Calc. RM",
    )
    val tagsOverflow = userWorkoutTags.size > 6
    var overflowMenuExpanded by remember { mutableStateOf(false) }

...
